url: exp://127.0.0.1:8081
---
- openLink: exp://10.1.2.10:8081
# cek tombol register jika ada, ini bener menu register
- assertVisible:
    id: "btn_register"

- tapOn:
    id: "fullname"
- eraseText
- inputText: "Test Fullname"

- tapOn:
    id: "email"
- eraseText
- inputText: "test@mail.com"

- tapOn:
    id: "btn_register"

- assertVisible: "response:{\"id\":\"1~uuid\",\"fullName\":\"Test Fullname\",\"email\":\"test@mail.com\"}"
# register sukses